fixed nav menu overflow between 1024 and 750

--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -4,6 +4,12 @@
     height: fit-content;
 }
 
+@media only screen and (max-width: 1024px) {
+    .header {
+        grid-template: 1fr / clamp(20px, 40px, 200px) 1fr clamp(20px, 40px, 200px);
+    }
+}
+
 @media only screen and (max-width: 750px) {
     .header {
         grid-template: 113px 1fr / 20px 1fr 20px;
